Have to change ownership again in `rpmbuild-osm2pgsql` after all packages have been installed.

--- a/docker/Dockerfile.rpmbuild-osm2pgsql
+++ b/docker/Dockerfile.rpmbuild-osm2pgsql
@@ -90,6 +90,7 @@ RUN --mount=type=cache,target=/var/cache/yum \
     && \
     rm -f /tmp/*.rpm && \
     if [ -n "${packages}" ] ; then yum -q -y install ${packages}; fi
+RUN chown -R ${RPMBUILD_USER}:${RPMBUILD_GROUP} /var/run/postgresql
 
 # Switch back to build user.
 USER ${RPMBUILD_USER}
